--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "pg-promise": "^11.5.4",
     "pug": "^3.0.2"
   }
 }
